--- a/package.json
+++ b/package.json
@@ -8,12 +8,26 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lgbaum/datashrink72.git"
+    "url": "git+https://github.com/datashrink72/datashrink72.git"
   },
-  "author": "",
+  "author": "datashrink",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/lgbaum/datashrink72/issues"
+    "url": "https://github.com/datashrink72/datashrink72/issues"
   },
-  "homepage": "https://github.com/lgbaum/datashrink72#readme"
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "webpack": "^2.2.1"
+  },
+  "dependencies": {
+    "express": "^4.15.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "jquery": "^3.1.1",
+    "mongoose": "^4.8.6"
+  },
+  "homepage": "https://github.com/datashrink72/datashrink72#readme"
 }
