--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
     "express": "^4.15.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "express-session": "^1.15.1",
     "jquery": "^3.1.1",
-    "mongoose": "^4.8.6"
+    "mongoose": "^4.8.6",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "homepage": "https://github.com/datashrink72/datashrink72#readme"
 }
