--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "watson-developer-cloud": "^2.16.0"
   },
   "homepage": "https://github.com/datashrink72/datashrink72#readme"
 }
