--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^4.8.6",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-twitter": "^1.0.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
