--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "crypto": "0.0.3",
     "express": "^4.15.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
     "jquery": "^3.1.1",
-    "mongoose": "^4.8.6"
+    "mongoose": "^4.8.6",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "homepage": "https://github.com/datashrink72/datashrink72#readme"
 }
