--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "body-parser": "^1.17.1",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
