--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.15.1",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
+    "mongoose-double": "0.0.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
