--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "d3": "^4.7.3",
+    "d3-selection-multi": "^1.0.1",
     "ejs": "^2.5.6",
     "express": "^4.15.0",
     "express-session": "^1.15.1",
