--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "babel-preset-stage-0": "^6.22.0",
     "body-parser": "^1.17.1",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
@@ -42,6 +45,8 @@
     "passport-twitter": "^1.0.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
     "twitter": "^1.7.0",
     "watson-developer-cloud": "^2.16.0"
   },
