debugging pipelines for heroku

--- a/app.json
+++ b/app.json
@@ -1,8 +1,18 @@
 {
   "name": "datashrink72",
-  "scripts": {
+  "scripts": { 
+    "postdeploy": "npm start"
   },
   "env": {
+    "DB_URL": {
+      "required": true
+    },
+    "S1_KEY": {
+      "required": true
+    },
+    "S1_SECRET": {
+      "required": true
+    }
   },
   "formation": {
   },
